feat(metrics): remove Configuration entity in favour of new TrackedMetric entity